--- a/zuper-app/src/app/middle-pane/middle-pane.component.html
+++ b/zuper-app/src/app/middle-pane/middle-pane.component.html
@@ -27,9 +27,11 @@
       <div *ngSwitchCase="'input-text'" class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label *ngIf="!item.isEditable" class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label *ngIf="!item.isEditable" class="block text-gray-700 font-bold">{{item.label}} 
+            <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <input type="text" [disabled]="item.isEditable"  class="w-full border p-2 rounded mt-2 disabled:bg-gray-200 disabled:cursor-not-allowed" [(ngModel)]="item.value" placeholder="Type here" (blur)="onBlurFunction()">
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -37,10 +39,11 @@
       <div *ngSwitchCase="'input-text-area'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable" class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable" class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <textarea  [disabled]="item.isEditable" class="w-full mb-1 p-2 border-b text-gray-500 text-lg border border-gray-300 rounded-lg disabled:bg-gray-200 disabled:cursor-not-allowed" rows="4" (blur)="onBlurFunction()" placeholder="Type here" [(ngModel)]="item.value"></textarea>
-          <!-- <input *ngIf="item.isEditable" type="checkbox" class="mr-2"><span *ngIf="item.isEditable">Required field</span> -->
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -48,9 +51,11 @@
       <div *ngSwitchCase="'input-number'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <input  [disabled]="item.isEditable" type="number" class="w-full border p-2 rounded mt-2 disabled:bg-gray-200 disabled:cursor-not-allowed"  [(ngModel)]="item.value" placeholder="Type here" (blur)="onBlurFunction()">
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -58,9 +63,11 @@
       <div *ngSwitchCase="'input-date'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <input  [disabled]="item.isEditable" type="date" id="date" name="date" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm disabled:bg-gray-200 disabled:cursor-not-allowed" [(ngModel)]="item.value" placeholder="Type here" (blur)="onBlurFunction()">
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -68,9 +75,11 @@
       <div *ngSwitchCase="'input-time'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <input  [disabled]="item.isEditable" type="time" id="time" name="time" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm disabled:bg-gray-200 disabled:cursor-not-allowed" [(ngModel)]="item.value" placeholder="Select time" (blur)="onBlurFunction()" />
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -78,9 +87,11 @@
       <div *ngSwitchCase="'input-date-time'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <input  [disabled]="item.isEditable" type="datetime-local" id="datetime" name="datetime" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm disabled:bg-gray-200 disabled:cursor-not-allowed" [(ngModel)]="item.value" placeholder="Select date and time" (blur)="onBlurFunction()" />
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -88,7 +99,8 @@
       <div *ngSwitchCase="'input-single-select'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <div class="mt-2">
             <label class="inline-flex items-center mr-4" *ngFor="let opt of item.selectValues;let i = index">
@@ -98,6 +110,7 @@
           </div>
           <p *ngIf="item.isEditable" class="text-black-400">Enter the values with comma to modify values</p>
           <input type="text" *ngIf="item.isEditable" [(ngModel)]="item.itemList" class="w-full border p-2 rounded mt-2"  placeholder="Type list here">
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -105,7 +118,8 @@
       <div *ngSwitchCase="'input-multi-select'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg disabled:bg-gray-200 disabled:cursor-not-allowed" placeholder="Enter the name"/>
           <div class="mt-2">
             <label class="inline-flex items-center mr-4" *ngFor="let opt of item.selectValues;let i = index">
@@ -115,6 +129,7 @@
           </div>
           <p *ngIf="item.isEditable" class="text-black-400">Enter the values with comma to modify values</p>
           <input type="text" *ngIf="item.isEditable" [(ngModel)]="item.itemList" class="w-full border p-2 rounded mt-2"  placeholder="Type list here">
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -122,7 +137,8 @@
       <div *ngSwitchCase="'input-dropdown'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <div class="mt-2">
             <label class="inline-flex items-center mr-4 w-full" >
@@ -133,6 +149,7 @@
           </div>
           <p *ngIf="item.isEditable" class="text-black-400">Enter the values with comma to modify values</p>
           <input type="text" *ngIf="item.isEditable" [(ngModel)]="item.itemList" class="w-full border p-2 rounded mt-2"  placeholder="Type list here">
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
@@ -140,7 +157,8 @@
       <div *ngSwitchCase="'input-file'"  class="flex items-center w-full">
         <svg class="text-grey-500 float-left mt-04 mr-3 w-1/12"  width="12" height="12" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="9" cy="5" r="1" />  <circle cx="9" cy="12" r="1" />  <circle cx="9" cy="19" r="1" />  <circle cx="15" cy="5" r="1" />  <circle cx="15" cy="12" r="1" />  <circle cx="15" cy="19" r="1" /></svg>
         <div class="w-full">
-          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}</label>
+          <label  *ngIf="!item.isEditable"  class="block text-gray-700 font-bold">{{item.label}}
+          <span  *ngIf="item.required" class="text-xs"> <span class="text-red-500">*</span>(Required)</span></label>
           <input *ngIf="item.isEditable" [(ngModel)]="item.label" class="w-full mb-1 p-2 text-md border-b font-bold border border-gray-300 rounded-lg" placeholder="Enter the name"/>
           <div class="mt-2">
             <label class="inline-flex items-center mr-4 w-full" >
@@ -149,6 +167,7 @@
             </label>
             <p *ngIf="item.value.name" class="mt-2 text-gray-700 block cursor-pointer" (click)="downloadFile(item)">Selected file: <strong>{{ item.value.name }}</strong></p>    
           </div>
+          <input type="checkbox" *ngIf="item.isEditable" class="mr-2" [(ngModel)] = "item.required"><span *ngIf="item.isEditable" class="text-sm">Required fields</span>
           <button *ngIf="item.isEditable" class="bg-blue-500 text-white p-2 rounded-lg float-right mt-2" (click)="onSaveItem(item,i)">Save</button>
         </div>
       </div>
