--- a/zuper-app/src/app/app.component.scss
+++ b/zuper-app/src/app/app.component.scss
@@ -15,12 +15,12 @@
 /* Modal content */
 .modal-content {
   background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  width: 300px;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  width: 35%;
   z-index: 1010;
   position: relative;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
   // position: absolute;
   // top: 40%;
   // right: 40%;
@@ -31,7 +31,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 
 .modal-title {
@@ -50,11 +50,11 @@
 }
 
 button {
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   cursor: pointer;
 }
 
